removed bio descriptions from AboutUs page; adjusted photo styling to prevent image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -257,7 +257,7 @@ i {
 }
 
 .card {
-  margin-right: 2em;
+  margin: 0.5em;
   background-color: antiquewhite;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
